loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:1: error: Missing closing brace `}' assumed here
var compt : Int = 0
^Poucet1:5: error: ';' expected but '{' found.
while (!sortieTrouvee) {
                       ^